[package]
name = "kernelci-storage"
version = "0.2.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", features = ["tracing", "multipart", "macros"] }
axum-server = { version = "0.8.0", features = ["rustls", "tls-rustls"] }
azure_blob_uploader = "0.1.4"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
bytes = "1.11"
chksum-hash-sha2-512 = "0.0.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.5"
fs2 = "0.4.3"
futures = "0.3.32"
futures-util = "0.3.32"
headers = "0.4.1"
hex = "0.4.3"
http-body-util = "0.1.3"
ipnet = "2.12.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = { version = "0.39.3", features = ["serde"] }
tar = "0.4.44"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "fs", "limit"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zstd = "0.13.3"
xz2 = "0.1.7"

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["blocking", "multipart"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "process"] }
tempfile = "3.27.0"
